# rslint

./: .gitattributes  .gitignore  .gitmodules  .golangci.yml  .prettierignore  AGENTS.md  AUTOMATED_PORTING.md  CI_TROUBLESHOOTING.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  Makefile  PERFORMANCE_IMPROVEMENTS.md  PR67_ANALYSIS.md  README.md  RULE_SCAFFOLDING_SUMMARY.md  architecture.md  ast-grep-rule.yml  automate-build-test-concurrent.md  automate-build-test.js  automate-validate-check.js  automated-port.js  compare-rules.js  cspell.config.cjs  debug-accessor.ts  debug-array-delete.ts  debug-arrow-function.js  debug-ban-tslint-tsconfig.json  debug-ban-tslint.jsonc  debug-bigint-test.ts  debug-case-9.ts  debug-class-methods.jsonc  debug-conditional.ts  debug-config.json  debug-config.jsonc  debug-consistent-return.ts  debug-constructor.ts  debug-dot-notation.ts  debug-explicit-config.jsonc  (+120 more)
.github/: copilot-instructions.md  release.yml  renovate.json5
.trae/: TODO.md
.vercel/: project.json
__patches__/: typescript-go.patch
agents/: AST_PATTERNS.md  CHECK_RULE.md  PORT_RULE.md  QUICK_REFERENCE.md  REVIEW_RULE_PR.md  UTILS_REFERENCE.md
arewerslintyet/: .gitignore  README.md  biome.json  debug-page.js  index.html  jest.config.js  jest.setup.js  package.json  playwright.config.ts  pnpm-lock.yaml  rsbuild.config.ts  tsconfig.json
benchmarks/: .gitignore  Containerfile  README.md  bench.sh  clone-projects.sh  eslint.config.mjs  setup.sh
crates/rslint-native/: Cargo.toml  index.d.ts  index.js  package.json
crates/rslint-native/src/: lib.rs  parse.rs  token_map.rs
crates/tsgo-client/: Cargo.toml  README.md
crates/tsgo-client/src/: client.rs  lib.rs  proto.rs  symbolflags.rs
crates/tsgo-client/tests/: integration_test.rs
crates/tsgo-client/tests/fixtures/module-exports/: tsconfig.json
crates/tsgo-client/tests/fixtures/module-exports/src/: index.ts  values.ts
crates/tsgo-client/tests/fixtures/simple-project/: tsconfig.json
crates/tsgo-client/tests/fixtures/simple-project/src/: index.ts  shorthand.ts  utils.ts
crates/tsgo-client/tests/snapshots/: integration_test__get_parameter_property_symbols.snap  integration_test__get_shorthand_assignment_value_symbol.snap
debug-files/: debug-proximity.go
docs/: LSP_ENHANCEMENTS.md  (+3 more)
(+3007 files in other folders)
