[package]
name = "tsgo-client"
version = "0.0.5"
edition = "2024"
description = "TypeScript Go client library"
license = "MIT"

[dependencies]
thiserror = "2.0.19"
serde = { version = "1.0.229", features = [ "derive" ] }
cbor4ii = {version = "1.2.2", features = ["serde1"]}
serde_bytes = "0.11.19"
bitflags = { version = "2.13.1"}

[dev-dependencies]
insta = { version = "1.47.2", features = ["json"] }
serde_json = "1.0.151"